HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/HeapAllocRawUnsafe/Expected.uv
//! Expected diagnostic metadata for the HeapAllocRawUnsafe rejected-source specimen.

expectedDiagnostic("E-MEM-3030", "rule.14.AllocRaw-Unsafe-Err")
